--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -12,7 +12,7 @@
     card_view:cardMaxElevation="@dimen/margin6">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/relativeLayout"
+        android:id="@+id/constraint_layout_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -20,7 +20,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/iv_beer"
+            android:id="@+id/image_view_product"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
@@ -42,8 +42,8 @@
             card_view:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/tv_name"
-                style="@style/TextAppearance.AppCompat.Subhead"
+                android:id="@+id/text_view_name"
+                style="@style/TextAppearance.Material3.HeadlineSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -52,8 +52,8 @@
                 tools:text="Buzz" />
 
             <TextView
-                android:id="@+id/tv_tagline"
-                style="@style/TextAppearance.AppCompat.Caption"
+                android:id="@+id/text_view_price"
+                style="@style/TextAppearance.Material3.BodyLarge"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
